--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/moment-with-locales.min.js"></script>
 
-    <title>Notification test</title>
+    <title>Notification test (Not success)</title>
 </head>
 <body class="day">
     <table style="position: absolute;right: 20px; top: 20px">
@@ -62,48 +62,10 @@
         let notesBody;
         let saveButton;
         let editButton;
-        let myIntervals = {};
-        //var notificationPush;
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-class fooTimer{
-    constructor(intervalFunction,intervalValue) {
-        if(!arguments){throw Exception;}
-        this.intervalFunction = intervalFunction; // ()=>{}
-        this.intervalValue = intervalValue || 1000;
-        this.interval = setInterval(this.intervalFunction,this.intervalValue);
-    }
-    stopInterval(){
-        clearInterval(this.interval);
-        this.interval = null;
-    }
-    startInterval() {
-        if (this.interval) {
-            this.stopInterval()
-        }
-        this.interval = setInterval(this.intervalFunction, this.intervalValue);
-    }
-}
+        var intervalXX;
 
-
-var timeGroup = [];
-
-function generateTimer(n) {
-    if(n ===1 ) return timeGroup.push(new fooTimer(timeGroup.length));
-    for (var i=0;i<n;i++){
-        timeGroup.push(new fooTimer(i));
-    }
-}
-function clearTimer(i) {
-    if(timeGroup[i] instanceof fooTimer){
-        timeGroup[i].stopInterval();
-    }
-}
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         function getID(i) {
             var indexID = i.replace(/[^0-9]/g, '');
-            
-
-            //save(indexID);
 
             // Save Notes
             if (notesBody.value !== "" && notesTitle.value !== "" && setTime.value !== "") {
@@ -114,20 +76,12 @@ function clearTimer(i) {
                 editButton.disabled = false;
                 editButton.style.display = "";
                 saveButton.style.display = "none";
-                //this.indexID = setInterval(pushNotification, 1000);
 
-                //setTimer(indexID);
+                intervalXX = setInterval(pushNotification, 1000);
 
-                //eval('var ' + notificationPush + indexID + ' = ' + setInterval(pushNotification, 1000) + ';');
-
-                //console.log(countTime);
                 localStorage.setItem(`savedTitle${indexID}`,notesTitle.value);
                 localStorage.setItem(`savedBody${indexID}`,notesBody.value);
                 localStorage.setItem(`savedTime${indexID}`,setTime.value);
-
-                //myIntervals[indexID] = setInterval(pushNotification.bind(null,indexID), 1000);
-                console.log(indexID);
-                //console.log(myIntervals[indexID]);
             }
         }
 
@@ -145,67 +99,31 @@ function clearTimer(i) {
             var countEdit = Number(localStorage.getItem(`countEdit${indexID}`));
 
             if (i == `saveBtn${indexID}` && countSave < 1 && (notesBody.value !== "" && notesTitle.value !== "" && setTime.value !== "")) {
-                console.log("You clicked save");
+                //console.log("You clicked save");
                 if (countEdit > 0) {
                     localStorage.setItem(`countEdit${indexID}`,'0');
                 }
                 localStorage.setItem(`countSave${indexID}`,'1');
-
                 getID(i);
-
-                new fooTimer(indexID,pushNotification.bind(null,indexID),1000); ///////////////////////////////////// here - 16 July 2020
-
-            } else if (i == `editBtn${indexID}` && countEdit < 1) {
-                console.log("You clicked edit");
+            } else if ((i == `editBtn${indexID}` && countEdit < 1) || (saveButton.disabled == true && countEdit == 1)) {
+                //console.log("You clicked edit");
                 localStorage.setItem(`countEdit${indexID}`,'1');;
                 localStorage.setItem(`countSave${indexID}`,'0');
-
-                //clearInterval(myIntervals[indexID]);
-                new fooTimer(clear(indexID)).stopInterval;
-
-
                 edit(i);
             } else if (i !== `editBtn${indexID}` && countEdit > 0) { // Need to delete
                 console.log("Error Edit");
             } else if (i !== `saveBtn${indexID}` && countSave > 0) { // Need to delete
                 console.log("Error Save");
             }
-
-            //document.getElementById(`saveBtn${indexID}`).onclick = function () {
-                //console.log("You clicked save");
-                //getID(this.id);
-            //}
         }
 
         function pushNotification(i){
-            //console.log(typeof(moment().format("YYYY-MM-DD-HH:mm")) + " and " + typeof(moment(moment(setTime.value).clone()).format("YYYY-MM-DD-HH:mm")));
             while (moment().format("YYYY-MM-DD-HH:mm") == moment(moment(setTime.value).clone()).format("YYYY-MM-DD-HH:mm")) {
                 showNotification(notesTitle.value,notesBody.value);
-                clearInterval(myIntervals[i]);
+                clearInterval(intervalXX);
                 break;
             }
         }
-
-        //function save(indexID) {
-            //if (notesBody.value !== "" && notesTitle.value !== "" && setTime.value !== "") {
-                //notesTitle.disabled = true;
-                //notesBody.disabled = true;
-                //setTime.disabled = true;
-                //saveButton.disabled = true;
-                //editButton.disabled = false;
-                //editButton.style.display = "";
-                //saveButton.style.display = "none";
-                ////this.indexID = setInterval(pushNotification, 1000);
-//
-//
-                ////eval('var ' + notificationPush + indexID + ' = ' + setInterval(pushNotification, 1000) + ';');
-//
-                ////console.log(countTime);
-                //localStorage.setItem(`savedTitle${indexID}`,notesTitle.value);
-                //localStorage.setItem(`savedBody${indexID}`,notesBody.value);
-                //localStorage.setItem(`savedTime${indexID}`,setTime.value);
-            //}
-        //}
 
         function edit(i) {
             var indexID = i.replace(/[^0-9]/g, '');
@@ -216,6 +134,8 @@ function clearTimer(i) {
             document.getElementById(`saveBtn${indexID}`).disabled = false;
             document.getElementById(`editBtn${indexID}`).style.display = "none";
             document.getElementById(`saveBtn${indexID}`).style.display = "";
+
+            clearInterval(intervalXX);
         }
 
         // Add new notes
@@ -256,7 +176,7 @@ function clearTimer(i) {
                 document.getElementById("notesTable").insertRow(-1).insertCell(0).innerHTML = `<div class="input-name"><input type="text" id="notesTitle${i}" style="width:70vw;" placeholder="Title"><span class="underline-animation"></span></div>`;
                 document.getElementById("notesTable").insertRow(-1).insertCell(0).innerHTML = `<textarea id="notesBody${i}" style="width:70vw;" placeholder="Content"></textarea>`;
                 document.getElementById("notesTable").insertRow(-1).insertCell(0).innerHTML = `<input type="datetime-local" id="timePicker${i}" style="width: 70vw;">`;
-                document.getElementById("notesTable").insertRow(-1).insertCell(0).innerHTML = `<button id="saveBtn${i}" onclick="getID(this.id)" disabled style="display: none;">Save</button><button id="editBtn${i}" onclick="edit(this.id)">Edit</button>`;
+                document.getElementById("notesTable").insertRow(-1).insertCell(0).innerHTML = `<button id="saveBtn${i}" onclick="setTimer(this.id)" disabled style="display: none;">Save</button><button id="editBtn${i}" onclick="setTimer(this.id)">Edit</button>`;
 
                 document.getElementById(`notesTitle${i}`).value = localStorage.getItem(`savedTitle${i}`);
                 document.getElementById(`notesBody${i}`).value = localStorage.getItem(`savedBody${i}`);
@@ -265,10 +185,6 @@ function clearTimer(i) {
                 document.getElementById(`notesTitle${i}`).disabled = true;
                 document.getElementById(`notesBody${i}`).disabled = true;
                 document.getElementById(`timePicker${i}`).disabled = true;
-
-                //document.getElementById(`saveBtn${i}`).style.display = 'none';
-                //document.getElementById(`editBtn${i}`).style.display = "";
-
             } else {
                 continue;
             }
